--- a/code/html/battle.html
+++ b/code/html/battle.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Battle</title>
-    <link rel="stylesheet" href="/code/css/battle.css">
+    <link rel="stylesheet" href="/pokemon-website/code/css/battle.css">
 </head>
 
 <body>
-    <a href="/code/welkom.html"><button id="welkomButton" class="button">naar welkom</button></a>
-    <a href="/code/html/index.html"><button id="pokedexButton" class="button">Terug naar pokedex</button></a>
+    <a href="/pokemon-website/code/welkom.html"><button id="welkomButton" class="button">naar welkom</button></a>
+    <a href="/pokemon-website/code/html/index.html"><button id="pokedexButton" class="button">Terug naar pokedex</button></a>
     <div id="battle-container">
         <h1 id="player">team 1</h1>
         <div id="player-team" class="team-container"></div>
@@ -26,7 +26,7 @@
         <button id="start-battle" onclick="startBattle()">Start Battle</button>
         <div id="battle-log"></div>
     </div>
-    <script src="/code/js/battle.js"></script>
+    <script src="/pokemon-website/code/js/battle.js"></script>
 </body>
 
 </html>
