--- a/code/html/index.html
+++ b/code/html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/code/css/style.css">
+    <link rel="stylesheet" href="/pokemon-website/code/css/style.css">
     <title>Document</title>
 </head>
 
@@ -13,8 +13,8 @@
         <h1>Pokédex</h1>
         <nav>
             <div class="left">
-                <a href="/code/welkom.html"><button id="welkomButton" class="button">Terug naar welkom</button></a>
-                <a href="/code/html/battle.html"><button id="battle" class="button">Naar battle</button></a>
+                <a href="/pokemon-website/code/welkom.html"><button id="welkomButton" class="button">Terug naar welkom</button></a>
+                <a href="/pokemon-website/code/html/battle.html"><button id="battle" class="button">Naar battle</button></a>
             </div>
             <div class="right">
                 <input type="text" id="searchInput" placeholder="Zoek een Pokémon naam op...">
@@ -25,8 +25,7 @@
         <button onclick="scrollToTop()" id="scrollToTopBtn" title="Ga naar boven">Top</button>
     </div>
 
-    <script src="/code/js/script.js"></script>
+    <script src="/pokemon-website/code/js/script.js"></script>
 </body>
 
 </html>
-<a href="/code/img/types/"></a>
